Fixing cart and log in nav bar on mobile view

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1900,14 +1900,6 @@ header .flex {
   font-weight: 600;
 }
 
-.uppercase {
-  text-transform: uppercase;
-}
-
-.lowercase {
-  text-transform: lowercase;
-}
-
 .text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity, 1));
@@ -2101,10 +2093,6 @@ header .flex {
 
 .duration-200 {
   transition-duration: 200ms;
-}
-
-.ease-out {
-  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
 }
 
 /* Container Fixes */
